Order db not working

--- a/lessons/05-client-jquery-ajax/homework/views/ingredients.handlebars
+++ b/lessons/05-client-jquery-ajax/homework/views/ingredients.handlebars
@@ -1,43 +1,21 @@
 <a href = "/" ><h1>Jessica's Burgers </h1> </a>
 
-<!-- <h2>Add Ingredient (GET)</h2>
-<form action="getIngredient" method="GET">
-  Name: <input type="text" name="name"/><br/>
-  Price: <input type="text" name="price" /><br/> 
-  <input type="submit" value="Submit">
-</form>
-
-<h2>Add Ingredient (POST)</h2>
-<form action="getIngredient" method="POST">
-  Name: <input type="text" name="name"/><br/>
-  Price: <input type="text" name="price"/><br/>
-  <input type="submit" value="Submit">
-</form>
-
-<h2>Add Ingredient (AJAX)</h2>
-<form id="ajax-form" action="getIngredient" method="POST">
-  Name: <input type="text" name="name"/><br/>
-  Price: <input type="text" name="price"/><br/>
-  <input type="submit" value="Submit">
-</form>
-<div id="result">  
-</div>  -->
 
 <h2>Add New Ingredient POST request</h2>
-<form action="getIngredient" method="POST">
+<form class = "inStock" action="getIngredient" method="POST">
   Price: $<input type="text" name="price"/><br/>
   Ingredients: <br>
-  <input type="radio" name="name" value="bun" checked/>Bun<br/>
-  <input type="radio" name="name" value="cheese"/>Cheese<br/>
-  <input type="radio" name="name" value="beefPatty"/>Beef Patty<br/>  
-  <input type="radio" name="name" value="tomato"/>Tomato<br/>
-  <input type="radio" name="name" value="lettuce"/>Lettuce<br/>
-  <input type="radio" name="name" value="onion"/>Onion<br/>
-  <input type="radio" name="name" value="ketchup"/>Ketchup<br/>
-  <input type="radio" name="name" value="mushroom"/>Mushroom<br/>
-  <input type="radio" name="name" value="avacado"/>Avacado<br/>
-  <input type="radio" name="name" value="bacoon"/>Bacon<br/>
-  <input type="radio" name="name" value="secretSauce"/>Secret Sauce<br/>
+  <input type="radio" name="name" value="Bun" checked/>Bun<br/>
+  <input type="radio" name="name" value="Cheese"/>Cheese<br/>
+  <input type="radio" name="name" value="Beef Patty"/>Beef Patty<br/>  
+  <input type="radio" name="name" value="Tomato"/>Tomato<br/>
+  <input type="radio" name="name" value="Lettuce"/>Lettuce<br/>
+  <input type="radio" name="name" value="Onion"/>Onion<br/>
+  <input type="radio" name="name" value="Ketchup"/>Ketchup<br/>
+  <input type="radio" name="name" value="Mushroom"/>Mushroom<br/>
+  <input type="radio" name="name" value="Avocado"/>Avocado<br/>
+  <input type="radio" name="name" value="Bacon"/>Bacon<br/>
+  <input type="radio" name="name" value="SecretSauce"/>Secret Sauce<br/>
   Other: <input type="text" name="name"/> <br/>
   
   <input type="submit" value="Submit">
