--- a/lessons/05-client-jquery-ajax/homework/views/layouts/main.handlebars
+++ b/lessons/05-client-jquery-ajax/homework/views/layouts/main.handlebars
@@ -9,4 +9,7 @@
     {{{body}}}
 </body>
 <script type="text/javascript" src="javascripts/main.js"></script>
+ <script type="text/javascript" src="javascripts/mainIngredients.js"></script>
+ <script type="text/javascript" src="javascripts/mainOrder.js"></script>
+ <script type="text/javascript" src="javascripts/mainkitchen.js"></script>
 </html>
