--- a/lessons/06-css-development-style/twotter/public/stylesheets/style.css
+++ b/lessons/06-css-development-style/twotter/public/stylesheets/style.css
@@ -8,12 +8,91 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #FFFFFF;
 }
+
+div.top
+        {
+            height: 201px;
+            width: 96%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: none;
+            margin-bottom: none;
+            background-color: #00A3CC;
+            padding: 40px;
+			border: 1px;
+			margin-top: 0px;
+			font-family: 'Open Sans', sans-serif;
+			font: 50px;
+			font-weight: 700;
+			color: white;
+        }
+
+div.logout
+	{
+		height: 200px;
+	}
+div.blue
+	{
+		width: 100%;
+		height: 470px;
+		background-color:#00A3CC;
+	}
+
+div.twoteform
+		{
+			width: 100%;
+			margin-right: none;
+			margin-left:none;
+			padding-right: none;
+			padding-left: none;
+			margin-top: none;
+            margin-bottom: 5px;
+            background-color: #00A3CC;
+		}
+
+
+
+div.my-delete-button
+		{
+			
+			margin-right: none;
+			margin-left: 389px;
+			padding-right: none;
+			padding-left: none;
+			margin-top: none;
+            margin-bottom: 20px;
+            background-color: #00A3CC;
+
+		}
+div.eachtwote
+		{
+			background-color: #E0E9EB;
+			padding-top: 5px;
+			padding-bottom: 8px;
+			padding-left: 20px;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			color: #005d73;
+
+		}
+div.userlist
+	{	
+		padding-left: 20px;
+		margin-left: 20px;
+		border: 50px;
+		color:#007793;
+	}
+
+div.highlighted
+	{
+		color: red;
+	}	
 
 h1{
 	padding: 40px;
-	border: 1px;
+	/*border: 1px;*/
 	margin-top: 0px;
 	font-family: 'Open Sans', sans-serif;
 	font: 50px;
@@ -31,8 +110,39 @@ h3{
 	background: #00A3CC;
 	color: white;
 }
+h3{
+	margin-top: none;
+	margin-bottom: none;
+	padding-top: none;
+	padding-bottom: none;
+}
+
 
 head{
 	margin-top:0px;
 
 }
+
+header{
+	float: left;
+	width: 70%;
+}
+
+
+div.bottom
+        {
+            height: 201px;
+            width: 96%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: none;
+            margin-bottom: none;
+            background-color: #CCCCCC;
+            padding: 40px;
+			border: 1px;
+			margin-top: 0px;
+			font-family: 'Open Sans', sans-serif;
+			font: 50px;
+			font-weight: 700;
+			color: white;
+        }
