--- a/lessons/06-css-development-style/twotter/views/home.handlebars
+++ b/lessons/06-css-development-style/twotter/views/home.handlebars
@@ -1,7 +1,7 @@
 <h1> twotter. <h1>
 <form id="login-form" method="POST" action="authenticate">
 <h3> {{message}} <h3>
-  My name is: <input id = "username"  type="text" name="name"/>  <input type="submit" value="Log On">
+  My name is: <input id = "username"  type="text" name="name"/>  <input type="submit" value="Log On" class="button">
 </form>
 <!--<h2 id = "newmessage"></h2> -->
 </br>
