--- a/lessons/06-css-development-style/twotter/views/twotter.handlebars
+++ b/lessons/06-css-development-style/twotter/views/twotter.handlebars
@@ -3,10 +3,10 @@
 
 <div class="twoteform" style = "float:left; width: 100%">
 	<form id="twote-post-form" method="POST" action="twote">
-		<h3>  what is on your mind? : <input id = "twote"  type="text" name="text"/>  <input type="submit" value="post my twote"></h3>
+		<h3>  what is on your mind? : <input id = "twote"  type="text" name="text"/>  <input type="submit" value="post my twote" class = button></h3>
 	</form>
 </div>
-<div class="my-delete-button" style = "float: left; width = 100%;"><button type="button" class = "delete-button">delete my twotes</button></div>
+<div class="my-delete-button" style = "float: left; width = 100%;"><button type="button" class = "button" id = "delete-button">delete my twotes</button></div>
 </div>
 <br>
 
