--- a/lessons/06-css-development-style/twotter/views/home.handlebars
+++ b/lessons/06-css-development-style/twotter/views/home.handlebars
@@ -1,4 +1,6 @@
-<h1> twotter. <h1>
+<h1> twotter.<h1>
+<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+
 <form id="login-form" method="POST" action="authenticate">
 <h3> {{message}} <h3>
   My name is: <input id = "username"  type="text" name="name"/>  <input type="submit" value="Log On" class="button">
