--- a/lessons/06-css-development-style/twotter/views/home.handlebars
+++ b/lessons/06-css-development-style/twotter/views/home.handlebars
@@ -3,9 +3,9 @@
 
 <form id="login-form" method="POST" action="authenticate">
 <h3> {{message}} <h3>
-  My name is: <input id = "username"  type="text" name="name"/>  <input type="submit" value="Log On" class="button">
+  My name is: <input id = "username"  type="text" name="name"/> 
+  Password: <input id = "password"  type="text" name="password"/>  <input type="submit" value="Log On" class="button">
 </form>
-<!--<h2 id = "newmessage"></h2> -->
 </br>
 </br>
 <img src="images/birdflipped.png" alt="bird image" style="width:304px;height:304px;">
